[project]
name = "ace-vision-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "matplotlib>=3.10.5",
    "opencv-python>=4.12.0.88",
    "scipy>=1.16.1",
    "torch",
    "ultralytics>=8.3.181",
]
